test/param/loop/paramForLoopBoundSmall.good
paramForLoopBoundSmall.chpl:1: error: Count of 5 is too small for range of size 4
